# jerryOS

./: .gitignore  Cargo.toml  Makefile  aarch64-unknown-jerryOS-elf.json  build.rs  build.sh  link.lds  lldb-startup.txt  lldb.sh  notes.txt  parsedDeviceTree.dts  qemu.sh
oldC/cMisc/: Makefile  lldb-startup.txt  qemu.sh
oldC/cSrc/: link.lds  main.c  start.asm
oldC/cSrc/devices/: devicesSetup.c  virtio.c
oldC/cSrc/devices/include/: virtio.h  virtioBlk.h
oldC/cSrc/devices/libfdtLite/: fdt.c
oldC/cSrc/devices/libfdtLite/include/: fdt.h  libfdt_internal.h
oldC/cSrc/include/: jerryOS.h
oldC/cSrc/jerryLibc/: string.c
oldC/cSrc/jerryLibc/include/: string.h
oldC/cSrc/memory/: ppm.c
oldC/cSrc/memory/include/: kevin.h  ppm.h  translationTableDescriptors.h
scripts_lldb/: bit_tools.py  dtb_to_dts.py
src/: entry.S  link.lds  main.c  main.rs  start.asm  types.rs
src/CBindings/: libfdtLite.rs
src/devices/: devicesSetup.c  libfdt_lite.rs  mod.rs  pl011_uart.rs  ram.rs  virtio.c  virtio.rs
src/devices/include/: devicesSetup.h  virtio.h  virtioBlk.h
src/devices/memory/: mod.rs  ppm.rs  ptm.rs  ttd.rs
src/include/: jerryOS.h  jerryTypes.h  main.h  meta.h
src/jerryLibc/: string.c
src/jerryLibc/include/: jerryLibc.h  string.h
src/libfdtLite/: fdt.c  fdt_ro.c
src/libfdtLite/include/: fdt.h  libfdt.h  libfdtLite.h  libfdt_env.h  libfdt_internal.h
src/memory/: kevin.c  mod.rs  ppm.c  ppm.rs  ptm.rs  ttd.rs
src/memory/include/: kevin.h  ppm.h  ptm.h  translationTableDescriptors.h
